--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -18,7 +18,7 @@ Já verificou? Faça <a href="{% url 'login' %}">Login</a>
     <div class="card mx-auto" style="max-width: 380px; margin-top:100px;">
           
           <div class="card-body">
-          <h4 class="card-title mb-4">Sign in</h4>
+          <h4 class="card-title mb-4">Entrar</h4>
           {% include 'includes/alerts.html' %}       
           <form action="{% url 'login' %}" method="POST">
             {% csrf_token %} 
@@ -30,11 +30,11 @@ Já verificou? Faça <a href="{% url 'login' %}">Login</a>
               </div> <!-- form-group// -->
               
               <div class="form-group">
-                  <a href="{% url 'forgotPassword' %}" class="float-right">Forgot password?</a> 
+                  <a href="{% url 'forgotPassword' %}" class="float-right">Esqueceu sua senha?</a> 
                
               </div> <!-- form-group form-check .// -->
               <div class="form-group">
-                  <button type="submit" class="btn btn-primary btn-block"> Login  </button>
+                  <button type="submit" class="btn btn-primary btn-block"> Login </button>
               </div> <!-- form-group// -->    
           </form>
           </div> <!-- card-body.// -->
