product order and payments

--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,10 @@
     <!-- custom javascript -->
     <script src="{% static 'js/script.js' %}" type="text/javascript"></script>
 
+    <!-- paypal Script-->   
+    <script src="https://www.paypal.com/sdk/js?client-id=AdjTCIZfDQH2Ius07VIis_iDWMEvK6BaXBhNi4yJ2Oq8HaPNfEIavD0oIvzJvaLRUSp_RktZv1lAAkrM&currency=BRL"></script>
+
+    
     <script type="text/javascript">
         /// some script
 
